<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Draw Lessons</string>

    <string name="action_settings">Ajustes</string>
    <string name="title_activity_principal_menu">Menu</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="save_draw">Guardar</string>
    <string name="ruler">R.Recta</string>
    <string name="compass">Compás</string>
    <string name="hand">Mano alzada</string>
    <string name="eraser">Limpiar</string>
    <string name="title_activity_activity_draw">activity_draw</string>
    <string name="clean_dialog">¿Seguro que desea limpiar el lienzo de trabajo?</string>
    <string name="positive_button">¡Seguro!</string>
    <string name="negative_button">¡Todavía no!</string>
    <string-array name="drawer_list">
        <item>Lienzo</item>
        <item>Cursos</item>
    </string-array>

</resources>
